--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,12 @@ jobs:
 
     - name: Get dependencies
       run: |
+        os=$(go env GOOS)
+        arch=$(go env GOARCH)
+        
+        curl -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/
+        sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} /usr/local/kubebuilder
+
         go mod download
 
     - name: Test
